--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
             "email": "kolvin@qq.com"
         }
     ],
+     "minimum-stability": "dev",
     "require": {
         "yiisoft/yii2": "*"
     },
