--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,8 @@
             "email": "kolvin@qq.com"
         }
     ],
-     "minimum-stability": "dev",
     "require": {
-        "yiisoft/yii2": "*"
+        "yiisoft/yii2-bootstrap": "@dev"
     },
     "autoload": {
         "psr-4": {
